# updated_testing_demos

bebop_control/: CMakeLists.txt
bebop_control/launch/: manual_control.launch  singleDrone.launch  singleDrone.launch~  sumo2bebop1.launch
bebop_control/src/: manual_control.cpp  singleDrone.cpp  sumo2bebop1.cpp  vicon_test.cpp
mocap_optitrack-Motive17/config/: mocap.yaml
